force-app/main/default/objects/IdeaTheme/fields/DI_Category__c.field-meta.xml
<CustomField>
    <fullName>DI_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DI Labs</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Industry Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>