force-app/main/default/objects/IdeaTheme/fields/DI_Co_owner__c.field-meta.xml
<CustomField>
    <fullName>DI_Co_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Idea_Themes1</relationshipName>
    <type>Lookup</type>
</CustomField>