force-app/main/default/objects/IdeaTheme/fields/DI_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>DI_Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Theme Idea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>