force-app/main/default/objects/IdeaTheme/fields/DI_Owner__c.field-meta.xml
<CustomField>
    <fullName>DI_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Idea_Themes</relationshipName>
    <type>Lookup</type>
</CustomField>