force-app/main/default/objects/IdeaTheme/fields/Featured_Image__c.field-meta.xml
<CustomField>
    <fullName>Featured_Image__c</fullName>
    <description>To save the link of the image.</description>
    <label>Featured Image</label>
    <type>Url</type>
</CustomField>